k8s/vpnapps/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpnapps-service
  namespace: vpnapps
spec:
  selector:
    app: vpnapps
  ports:
    - name: qb-http
      protocol: TCP
      port: 8080
      targetPort: qb-http
    - name: prowlarr-http
      protocol: TCP
      port: 9696
      targetPort: prowlarr-http
    # The torrent port needs to be exposed on the service for port forwarding rules
    # in Traefik or your router if you want to enable active torrenting.
    - name: torrent-tcp
      protocol: TCP
      port: 6881
      targetPort: torrent-tcp
    - name: torrent-udp
      protocol: UDP
      port: 6881
      targetPort: torrent-udp
    - name: flaresolverr-http
      protocol: TCP
      port: 8191
      targetPort: fs-http
