k8s/vpnapps/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vpnapps-ingressroute
  namespace: vpnapps
spec:
  entryPoints:
    - web
  routes:
    # - match: Host(`qbittorrentvpn.localdev`)
    #   kind: Rule
    #   services:
    #     - name: vpnapps-service
    #       port: 8080
    - match: Host(`prowlarr.localdev`)
      kind: Rule
      services:
        - name: vpnapps-service
          port: 9696
